// Original file: src/proto/cryptoData.proto


export interface CoinData {
  'name'?: (string);
  'timeStamp'?: (string);
  'currentPrice'?: (string);
  'arithmeticAggregate'?: (string);
  'geometricAggregate'?: (string);
  'harmonicAggregate'?: (string);
}

export interface CoinData__Output {
  'name'?: (string);
  'timeStamp'?: (string);
  'currentPrice'?: (string);
  'arithmeticAggregate'?: (string);
  'geometricAggregate'?: (string);
  'harmonicAggregate'?: (string);
}
